# nodec_scene_editor

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yaml
docs/: fig.drawio
include/nodec_scene_editor/: component_editor.hpp  component_registry.hpp  entity_inspector_window.hpp  scene_editor.hpp  scene_gizmo.hpp
include/nodec_scene_editor/components/: selected.hpp
include/nodec_scene_editor/impl/: scene_editor_impl.hpp
tests/: CMakeLists.txt  component_editor.cpp  component_registry.cpp
